# background_subtraction

./: CMakeLists.txt  README.md
src/: Gaussian.cpp  Gaussian.h  MOG.cpp  MOG.h  main.cpp
